removed previous code

--- a/appinventor/appengine/war/Ya.css
+++ b/appinventor/appengine/war/Ya.css
@@ -14,53 +14,30 @@ they get cut off in Windows.
 
 @font-face {
   font-family: Roboto;
-  src: url('/fonts/Roboto-Regular.ttf');
+  src: url('/fonts/Roboto-Regular.ttf') format("truetype");
 }
 
 @font-face {
   font-weight: bold;
   font-family: Roboto;
-  src: url('/fonts/Roboto-Bold.ttf');
-}
-
-
-@font-face {
-  font-family: OpenDyslexic;
-  src: url('/fonts/OpenDyslexic-Regular.otf');
-}
-
-@font-face {
-  font-weight: bold;
-  font-family: OpenDyslexic;
-  src: url('/fonts/OpenDyslexic-Bold.otf');
+  src: url('/fonts/Roboto-Bold.ttf') format("truetype");
 }
 
 body, html {
   height: 100%;
 }
 
-
-
-.gwt-bodyOdf{
-  font-family: OpenDyslexic, Helvetica, Arial, sans-serif;
-}
-
-.gwt-bodyRob{
-  font-family: Roboto, Helvetica, Arial, sans-serif;
-}
-
-
-.gwt-bodyRob .gwt-bodyOdf{
-  font-family: OpenDyslexic, Helvetica, Arial, sans-serif;
-}
-
 body {
   background-color: lightgrey;
   /* TODO(opensource): Change to commented version below once we're ready */
   background: url(images/squairy_light.png);
-  
+  font-family: Roboto, Helvetica, Arial, sans-serif;
 }
 
+table td,
+select {
+  font-family: Roboto, Helvetica, Arial, sans-serif;
+}
 /* For the TOS Form*/
 .floatingBox {
   width: 300px;
@@ -333,6 +310,13 @@ body {
   filter:         drop-shadow(0px 0px 1px #222); */
 }
 
+/*
+.ode-Logo:hover {
+  -webkit-filter: drop-shadow(0px 0px 3px #222);
+  filter:         drop-shadow(0px 0px 3px #222);
+}
+*/
+
 .ode-LogoText {
   font-size: 16px;
   color: grey;
@@ -360,7 +344,7 @@ body {
 .ode-TopPanelLinks .gwt-TitleLabel {
   cursor: pointer;
   color: rgb(100, 100, 100);
-  
+  font-family: Roboto, Helvetica, Arial, sans-serif;
   font-weight: 300;
   font-size: 12px;
   margin-right: 16px;
@@ -379,7 +363,7 @@ body {
 
 .ode-TopPanelLabel {
   color: #888;
-  
+  font-family: Roboto, Helvetica, Arial, sans-serif;
   font-size: 15px;
 }
 
@@ -1094,7 +1078,7 @@ select.ode-PropertyEditor[disabled] {
   position: absolute;
   border: 0;
   background-color: transparent;
- 
+  font: 20px Roboto bold;
   color: white;
   display: none;
 }
@@ -1858,7 +1842,7 @@ textarea::-webkit-input-placeholder {
 .gallery .gwt-TabBar .gwt-TabBarItem,
 .gallery .gwt-TabBar .gwt-TabBarItem-selected {
   font-size: 28px;
-  
+  font-family: "Roboto",Arial,sans-serif;
   text-transform: uppercase;
   padding: 5px;
   margin: 0;
@@ -2137,7 +2121,7 @@ textarea::-webkit-input-placeholder {
 .gallery-app-single .gallery-app-showcase .gwt-TabBarItem {
   margin: 0 15px;
   font-size: 18px;
-
+  font-family: "Roboto", Arial, sans-serif;
   font-weight: 300;
   padding: 0;
 }
@@ -2147,7 +2131,7 @@ textarea::-webkit-input-placeholder {
   padding: 0;
   width: 230px;
   font-size: 14px;
-  
+  font-family: "Roboto", Arial, sans-serif;
   font-weight: 300;
   color: #666;
 }
@@ -2216,7 +2200,7 @@ textarea::-webkit-input-placeholder {
 .app-title,
 .gallery-app-details .app-comments-header {
   font-size: 28px;
-  
+  font-family: "Roboto", Arial, sans-serif;
   font-weight: 300;
   margin-bottom: 5px;
 }
@@ -2573,6 +2557,7 @@ textarea::-webkit-input-placeholder {
 }
 
 .ac-renderer {
+  font: normal 13px Arial, sans-serif;
   position: absolute;
   background: #fff;
   border: 1px solid #666;
@@ -2582,20 +2567,16 @@ textarea::-webkit-input-placeholder {
   height: 294px;
   overflow: auto;
 }
-
 .ac-row {
   cursor: pointer;
   padding: .4em;
 }
-
 .ac-highlighted {
   font-weight: bold;
 }
-
 .ac-active {
   background-color: #b2b4bf;
 }
-
 .ai_type_block {
   position: absolute;
   z-index: 2000;
